# microplastic_detection_csc26

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  DATASET.md  GITHUB_PROJECTS.md  Makefile  NOTICE.md  README.md  pyproject.toml  references.bib  samples.csv  samples.csv.example
annotations/: 20260605_145851.txt  20260605_153307.txt  25275a31-ef27-4f0b-a75f-8b21dc09bc76.txt  2923c4d7-3db9-4be2-8576-9b1baa075fdd.txt  4f9a7ac0-cda4-4a9c-a80a-25bc95c93ec1.txt  6be4c91c-f59c-4d2f-9933-d0a6a23f7f79.txt  88741201-060d-4949-b0de-b820945cd414.txt  DT5A0150.txt  IMG_8891.txt  b57adaf3-ce18-4886-a6ed-0b0254872261.txt  df2c4d38-89a8-4763-b650-82ca42363715.txt
app/: __init__.py  server.py
configs/: corseacare.yaml  label_studio_config.xml
docs/: ANNOTATION_GUIDE.md  HANDSON.md  MANUSCRIPT.md  RESULTS.md  RESULTS_v2.md
labelstudio/: 03_CorSeaCare.json  04_CorSeaCare_preannot_verif.json  05_csc_260606_1.json  08_csc_260606_2.json  09_csc_260606_3.json  10_csc_260606_4.json  README.md  index.json
models/: README.md  corseacare_tiles_v6.pt  corseacare_tiles_v7.pt
notebooks/: train_colab.ipynb
scripts/: _val.py  annotate.sh  build_reference_guide.py  build_yolo_dataset.py  calibrate_mesh.py  classify_fewshot.workflow.js  cluster_autre.py  cluster_candidates.py  cluster_residual.py  confidence_split.py  enrich_consolidate.py  enrich_extract.py  eval_binary.py  export_from_ls.py  export_label_studio.py  extract_fp.py  find_redundant.py  gt_to_yolo.py  launch_label_studio.sh  ls_create_project.py  make_candidate_crops.py  make_figures.py  make_manifest.py  make_reannot_import.py  make_review_import.py  make_test_dataset.py  make_train_synth.py  preannotate_corseacare.py  preannotate_sam2.py  predict_corseacare.py  predict_tiled.py  restore_label_studio.py  results_consistency.py  run_real_local.py  run_test_dataset.py  serve_images.py  setup.sh  tile_dataset.py  train_from_label_studio.py  train_local.py  (+2 more)
src/corseacare/: calib.py  cli.py  cluster.py  config.py  features.py  ls_merge.py  mask.py  measure.py  metrics.py  report.py  runner.py  sieve.py  tiling.py  types.py  viz.py
src/corseacare/data/: __init__.py  annotate_sam2.py  convert.py  prepare_deepparticle.py
src/corseacare/pipeline/: __init__.py  contour.py  detector.py  segment_sam2.py  sequential.py
tests/: test_annotate_sam2.py  test_app_import.py  test_calib.py  test_cli.py  test_cluster.py  test_config.py  test_contour.py  test_convert.py  test_detector.py  test_features.py  test_ls_merge.py  test_mask.py  test_measure_colour.py  test_measure_records.py  test_measure_size.py  test_metrics.py  test_prepare_deepparticle.py  test_reference_guide.py  test_report.py  test_segmenter.py  test_sequential.py  test_sieve.py  test_smoke.py  test_tiling.py  test_types.py  test_viz.py
