[project]
name = "corseacare"
version = "0.1.0"
description = "Counting marine plastic particles in RGB photos (CorSeaCare)."
requires-python = ">=3.12"
dependencies = [
    "numpy>=1.26",
    "opencv-python-headless>=4.9",
    "scikit-image>=0.23",
    "pandas>=2.2",
    "pillow>=10.0",
    "pyyaml>=6.0",
    "typer>=0.12",
    "streamlit>=1.36",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-cov>=5.0"]

# Real-model backends are intentionally NOT declared here: they pull in torch (~GB) and
# SAM2 ships on GitHub under the package name `sam-2`. The Fake backends let the whole
# engine be built and unit-tested without them. To run real models / training
# (Colab or onshore, good connection):
#   uv pip install "ultralytics>=8.3" "sam-2 @ git+https://github.com/facebookresearch/sam2.git"

[project.scripts]
corseacare = "corseacare.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
markers = ["integration: needs model downloads / network"]
addopts = "-m 'not integration'"
pythonpath = ["."]   # so tests can import the top-level `app` package

[tool.hatch.build.targets.wheel]
packages = ["src/corseacare"]
